Make sure images don't get distorted in header

--- a/public/style.css
+++ b/public/style.css
@@ -1285,6 +1285,7 @@ body.mobile #chabad_body_page:has(#chabad_left_colum) div#chabad_head .chabad_lo
 }
 #chabad_body_page:has(#chabad_left_colum) :is(img[src~=preschool_banner_image], .chabad_image_banner:not(:has(img))) {
   content: url(https://mendelgordon.github.io/chabad-org-preschool-4/dist/assets/img/photos/PreschoolStockBackground.jpg);
+  object-fit: cover;
 }
 #chabad_body_page:has(#chabad_left_colum) .chabad_image_banner:not(:has(img)) {
   height: 100%;
